--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,27 @@ body {
 .text-bright {
     color: var(--lightBlue);
 }
+
+
+
+.btn-black {
+    background: transparent;
+    text-transform: capitalize;
+    font-size: .8rem !important;
+    font-weight: 700;
+    color: var(--mainDark);
+    border-radius: 0 !important;
+    border: .1rem solid var(--mainDark) !important;
+}
+
+.btn-black:hover{
+    background: var(--mainDark) !important;
+    color: var(--mainWhite) !important;
+}
+
+
+.cart-icon{
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: var(--mainYellow);
+}
